# hypothesis-generation

./: .gitignore  LICENSE  LICENSE.txt  README.md  baseline_no_hypothesis_inference.py  batched_learning_generation.py  batched_learning_inference.py  pipeline.py  pyproject.toml  regression_pipeline.py  requirements.txt  run_cross_model_ind.sh  run_cross_model_ood.sh  run_pipeline.sh  run_pipeline_regression.sh  run_pipeline_synth.sh  setup.py  test_generateion.py  test_inference.py
IO_prompting/: __init__.py  generation.py  prompt.py  update.py
code/: claude_api_cache.py  data_loader.py  data_processor.py  diplomacy_data_utils.py  prompt.py  prompt_old.py  tasks.py  utils.py
conda_env_configs/: 240112_inductive_reasoning.yml  LLMs-new.yml  hypogenic.yml  inductive_reasoning.yml
data/: binary_original_sst_with_cot_train8.jsonl  diplomacy_game1_train_balance_class.jsonl  diplomacy_game1_train_balance_class_swnames.jsonl  diplomacy_game2_test_90_10_class.jsonl  diplomacy_game2_test_90_10_class_swnames.jsonl  diplomacy_game_id_3.jsonl  diplomacy_swnames_game_id_3.jsonl  diplomacy_swnames_game_id_3_90_10_class.jsonl  diplomacy_test_game_id_2.jsonl  diplomacy_test_game_id_2_swnames.jsonl  diplomacy_test_game_id_3.jsonl  diplomacy_test_game_id_3_swnames.jsonl  diplomacy_train_game_id_1.jsonl  diplomacy_train_game_id_1_swnames.jsonl  hans_eval_sample_100.jsonl  headline_binary_dataset.csv  headline_binary_test_dataset.csv  headline_binary_train.json  headline_binary_training_dataset.csv  headline_binary_val.json  headline_binary_validation_dataset.csv  headline_dataset_preprocess.py  hotel_reviews_test.json  hotel_reviews_test.jsonl  hotel_reviews_test_all_old.jsonl  hotel_reviews_test_old.jsonl  hotel_reviews_train.json  hotel_reviews_train.jsonl  hotel_reviews_train_all_old.jsonl  hotel_reviews_train_old.jsonl  hotel_reviews_val.jsonl  multinli_train_sample_1000.jsonl  ood_hotel_reviews_Chicago.json  (+7 more)
(+502 files in other folders)
