[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypogenic"
version = "0.3.5"
description = "A package for generating and evaluating hypotheses."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Haokun Liu"},
    {name = "Mingxuan Li"},
    {name = "Chenfei Yuan"},
    {name = "Yangqiaoyu Zhou"},
    {name = "Tejes Srivastava"},
    {name = "Chenhao Tan"}
]
maintainers = [
    {name = "Haokun Liu", email = "haokunliu@uchicago.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy~=1.26.3",
    "pandas~=2.1.4",
    "datasets~=2.16.1",
    "transformers~=4.45.1",
    "scikit-learn~=1.3.0",
    "matplotlib~=3.8.0",
    "pyyaml~=6.0.1",
    "openai~=1.40.3",
    "anthropic~=0.32.0",
    "pulp~=2.9.0",
    "redis~=5.0.1",
    "torch~=2.4.0",
    "accelerate~=0.33.0",
    "colorlog~=6.8.2",
    "tqdm",
    "beautifulsoup4~=4.7.1",
    "boto3~=1.34.158",
    "requests~=2.32.3",
    "Flask~=1.0.2",
    "lxml",
    "python-magic~=0.4.18",
    "latex2mathml~=2.16.2",
    "itsdangerous~=2.0.1",
    "httpx==0.27.2",
]

[project.optional-dependencies]
dev = [
    "vllm~=0.6.2",
    "vllm-flash-attn~=2.6.2",
]

[project.scripts]
hypogenic_generation = "hypogenic_cmd.generation:main"
hypogenic_inference = "hypogenic_cmd.inference:main"

[project.urls]
Homepage = "https://github.com/ChicagoHAI/hypothesis-generation"
Repository = "https://github.com/ChicagoHAI/hypothesis-generation"
Issues = "https://github.com/ChicagoHAI/hypothesis-generation/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]
